@@ -2,6 +2,7 @@
 v6.0.0beta2
 -----------
 
+[jan] Highlight quota level in dynamic mode.
 [mms] Add keyboard shortcuts to dynamic compose page (Michael Wing
       <marsfurrycreature@gmail.com>).
 [mms] Fix sidebar element wrapping.
